app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowerapp
  namespace: suwetha-ns 
spec:
  replicas: 1
  strategy: 
  type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 1
    maxSurge: 1
  selector:
    matchLabels:
      label: flower-app
  template:
    metadata:
      label:
       app: flower-app
    spec:
      containers:
        - name: flowerimage
          image: suwetha07/flowerwebapp:v1.1.0
          port:
            - containerPort: 3000
      resources:
        requests:
          cpu: "100Mi"
          memory: "256Mi"
        limit:
          cpu: "200Mi"
          memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: flower-Service
  namespace: suwetha-ns
spec:
  selector:
    label: flower-app
  ports:
    - port: 80
    targetPort: 3015
  type: NodePort
